arreglo en front para seguridad